# w3ai-tool

./: .env  Cargo.toml
src/: db.rs  main.rs  model.rs
