[package]
name = "w3ai-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15.6"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"